@@ -1,48 +1,61 @@
 package com.trader.backend.config;
 
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.ComponentScan;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.Ordered;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
-import org.springframework.web.servlet.config.annotation.EnableWebMvc;
 
 import java.util.Arrays;
 import java.util.List;
-@ComponentScan
+import java.util.stream.Collectors;
+
+/**
+ * Global CORS configuration for all REST endpoints. The allowed origins can be
+ * overridden via the {@code ALLOWED_ORIGINS} environment variable (comma
+ * separated). Defaults to the Vercel frontend.
+ */
 @Configuration
-@EnableWebMvc
 public class CorsConfig {
 
-    @Value("${cors.allowedOrigins:https://combinedfrontendbackend.vercel.app,http://localhost:4200}")
+    @Value("${ALLOWED_ORIGINS:https://combinedfrontendbackend.vercel.app}")
     private String allowedOrigins;
 
     @Bean
-    public CorsFilter corsFilter() {
+    public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(false);
-        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-        config.setAllowedHeaders(List.of("Content-Type"));
-        config.setAllowedMethods(List.of("GET"));
+
+        List<String> origins = Arrays.stream(allowedOrigins.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toList());
+
+        config.setAllowedOrigins(origins);
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of(
+                "Authorization",
+                "Content-Type",
+                "X-Requested-With",
+                "Accept",
+                "Origin"));
+        config.setExposedHeaders(List.of("Location", "Link", "Content-Disposition"));
+        config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        List<String> paths = List.of(
-                "/auth/**",
-                "/md/selection",
-                "/md/candles",
-                "/md/stream",
-                "/md/last-ltp",
-                "/md/ltp",
-                "/md/sector-trades",
-                "/ops/live-status",
-                "/ops/influx-sanity",
-                "/ops/market-clock",
-                "/ops/upstox-balance"
-        );
-        paths.forEach(p -> source.registerCorsConfiguration(p, config));
+        source.registerCorsConfiguration("/**", config);
+        return source;
+    }
 
-        return new CorsFilter(source);
+    @Bean
+    public FilterRegistrationBean<CorsFilter> corsFilter(CorsConfigurationSource source) {
+        FilterRegistrationBean<CorsFilter> bean = new FilterRegistrationBean<>(new CorsFilter(source));
+        bean.setOrder(Ordered.HIGHEST_PRECEDENCE);
+        return bean;
     }
 }
+
